# Chunky

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  ci.yml
scripts/: fetch-bge-model.ps1  fetch-bge-model.sh  fetch-webview2-loader.ps1  gen-icons.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: entitlements.plist
src-tauri/src/: claude_install.rs  embedded_assets.rs  lib.rs  main.rs  office_convert.rs  searchable_text.rs  shell_bridge.rs
src-tauri/src/index_service/: embeddings.rs  mod.rs
src-tauri/src/mcp_service/: mod.rs
src-tauri/src/mcp_stdio/: mod.rs
src-tauri/src/retrieval_service/: mod.rs
src-tauri/src/startup_manager/: mod.rs
src-tauri/src/startup_manager/api/v1/: events.rs  methods.rs  mod.rs  path_registry.rs  types.rs
src-tauri/src/startup_manager/embedded/seed/sql/: 0001_init.sql  0002_node_edge.sql  0003_fts5.sql  0004_vec.sql
src-tauri/src/startup_manager/internal/: extract.rs  lock.rs  migrate.rs  mod.rs  orchestrator.rs  recovery.rs  state.rs
src-tauri/src/workspace_service/: mod.rs
src/ui-app/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
src/ui-app/src/: App.css  App.tsx  index.css  main.tsx
src/ui-app/src/bridge/: client.ts  types.ts
src/ui-app/src/components/: ErrorBoundary.tsx  Icon.tsx  IntentPicker.tsx  MarkdownPreviewModal.css  MarkdownPreviewModal.tsx  ProjectHeader.tsx  Sidebar.css  Sidebar.tsx  SidebarProjectSwitcher.tsx  SlashArgPrompt.tsx  SlashCommandHost.tsx  SlashProposalPanel.tsx  StatusBar.tsx  TopBar.tsx  useBlockSelection.ts
src/ui-app/src/lib/: artifact-ids.ts  chat-session.ts  citations.tsx  extract-client.ts  extract-worker.ts  (+11 more)
website/: app.js  index.html  robots.txt  sitemap.xml  styles.css
(+45 files in other folders)
