[workspace]
resolver = "2"
members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mark Durbin <mark@nestedcube.com>"]
license = "MIT"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"

[package]
name = "chunky"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
sqlite-vec = "0.1"
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
tokio = { version = "1", features = ["process", "io-util", "time", "fs"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
url = "2"
html2md = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
